--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: php
 php:
-  - '7.1.3'
+  - '7.2'
 os: 'linux'
-dist: 'xenial'
+dist: 'bionic'
 before_install:
   - 'composer install'
   - 'composer update'
   - 'cp .env.example .env'
   - 'php artisan key:generate'
+  - 'php artisan migrate'
+install:
+  - 'php artisan passport:install'
